All basic functionalities done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="container-in">
       <div class="search-container">
           <div class="search-engine">
-          <p class="search-title">Search Names</p>
+          <p class="search-title">Search the web</p>
           <input
               type="input"
               id="search-input"
